--- a/.hgignore
+++ b/.hgignore
@@ -1,11 +1,13 @@
 syntax: glob
+lfs.db
+.installed.cfg
 *.pyc
 *.pyo
 *.DS_Store 
-*parts
-*eggs
-*develop-eggs
-*bin
-*downloads
-*.installed.cfg
-*.egg-info/
+*bin/
+*develop-eggs/
+*dist
+*downloads/
+*egg-info/
+*eggs/
+*parts/
